[project]
name = "ComfyUI"
version = "0.3.44"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10.12"
dependencies = [
    # Core ComfyUI dependencies
    "comfyui-frontend-package==1.23.4",
    "comfyui-workflow-templates==0.1.35",
    "comfyui-embedded-docs==0.2.4",
    
    # Base dependencies from parent project
    "aiohttp>=3.11.8",
    "asyncio==3.4.3", 
    "click==8.1.8",
    "confluent-kafka==2.8.0",
    "einops==0.8.0",
    "minio==7.2.15",
    "noisereduce>=3.0.3",
    "numpy>=1.25.0",
    "onnx==1.17.0",
    "opencv-python>=4.7.0.72",
    "pillow==11.1.0",
    "psutil==6.1.1",
    "pymongo==4.11",
    "python-dotenv==1.0.1",
    "pyyaml==6.0.2", 
    "redis==5.2.1",
    "requests==2.32.3",
    "safetensors>=0.4.2",
    "scikit-image==0.25.1",
    "scipy==1.15.1",
    "soundfile==0.13.1",
    "tqdm==4.67.1",
    "tritonclient[http]==2.46.0",
    
    # PyTorch ecosystem
    "torch==2.6.0",
    "torchsde",
    "torchvision", 
    "torchaudio>=2.6.0",
    
    # ML/AI dependencies
    "transformers>=4.37.2",
    "tokenizers>=0.13.3",
    "sentencepiece",
    "yarl>=1.18.0",
    
    # Database
    "alembic",
    "SQLAlchemy",
    
    # Non-essential dependencies
    "kornia>=0.7.1",
    "spandrel",
    "av>=14.2.0",
    "pydantic~=2.0",
    "pydantic-settings~=2.0",
]

[project.urls]
homepage = "https://www.comfy.org/"
repository = "https://github.com/comfyanonymous/ComfyUI"
documentation = "https://docs.comfy.org/"

[tool.ruff]
lint.select = [
  "N805", # invalid-first-argument-name-for-method
  "S307", # suspicious-eval-usage
  "S102", # exec
  "T",    # print-usage
  "W",
  # The "F" series in Ruff stands for "Pyflakes" rules, which catch various Python syntax errors and undefined names.
  # See all rules here: https://docs.astral.sh/ruff/rules/#pyflakes-f
  "F",
]
exclude = ["*.ipynb"]